--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
+    implementation 'com.android.support:recyclerview-v7:29.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-firestore:21.4.2'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
