--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             android:windowSoftInputMode="adjustResize" />
 
         <activity android:name=".notesManagement.ActivityAddNote" />
+        <activity android:name=".notesManagement.LoadNoteActivity" />
     </application>
 
 </manifest>
